--- a/node-passport-login/package.json
+++ b/node-passport-login/package.json
@@ -27,6 +27,13 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "chalk": "^4.0.0",
-    "express": "^4.17.1"
+    "connect-flash": "^0.1.1",
+    "ejs": "^3.1.2",
+    "express": "^4.17.1",
+    "express-ejs-layouts": "^2.5.0",
+    "express-session": "^1.17.1",
+    "mongoose": "^5.9.10",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0"
   }
 }
