--- a/node-passport-login/package.json
+++ b/node-passport-login/package.json
@@ -28,6 +28,7 @@
     "bcryptjs": "^2.4.3",
     "chalk": "^4.0.0",
     "connect-flash": "^0.1.1",
+    "dotenv": "^8.2.0",
     "ejs": "^3.1.2",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
